--- a/report/P2.tex
+++ b/report/P2.tex
@@ -71,7 +71,7 @@
 
 \input{sections/ch4-dcmotorcontroller.tex}
 
-\input{section/ch4-stepper.tex}
+\input{sections/ch4-stepper.tex}
 
 %\input{sections/ch4-design.tex}
 
