--- a/report/sections/ch4-stepper.tex
+++ b/report/sections/ch4-stepper.tex
@@ -1,3 +1,5 @@
+\clearpage
+\section{Stepper motor}
 Stepper motors are electrical motors that can be precisely controlled.
 It divides a full rotation into a discrete amount of steps, each equally big.
 
