Added some todos

--- a/report/sections/ch4-laser.tex
+++ b/report/sections/ch4-laser.tex
@@ -3,9 +3,11 @@
 
 A SoC (System-on-a-Chip) solution for optical distance measurements applications. The PulsedLight LIDAR has a 4.7 - 5.5 V nominal and 6 V potentially maximum DC operating range. The sensor has a theoretical limit of 40m range and 100Hz rep rate.
 
-Laser Emitter Accuracy: +/- 0.025m \\
-Acquisition Time: < 0.02 sec \\
-\\
+%Laser Emitter Accuracy: +/- 0.025m \\
+%Acquisition Time: < 0.02 sec \\
+
+%How the laser works
+%diagram showing the laser signal
 
 The assembling of the laser happened in the following way:
 
