--- a/report/sections/ch4-controller.tex
+++ b/report/sections/ch4-controller.tex
@@ -5,8 +5,8 @@
 \begin{figure}[H]
 	\centering
 	\includegraphics[scale=.4]{images/GPIO_Pi2.png}
-	\caption{The pinout and wiring of the LIDAR and Raspberry Pi}
-	\label{fig:wiringlidarpi}
+	\caption{The pinout of the Raspberry Pi 2 model B, revision 2}
+	\label{fig:gpioraspbi2}
 \end{figure}
 
 % installing Raspbian
