Sorry about the big commit
I WAS IN THE DANGER ZONE

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -59,8 +59,6 @@
 
 \input{sections/ch4-controller.tex}
 
-\input{sections/ch4-ultrasonic.tex}
-
 \input{sections/ch4-Opticalflow.tex}
 
 \input{sections/ch4-laser.tex}
@@ -69,7 +67,11 @@
 
 \input{sections/ch4-slipring.tex}
 
+\input{sections/ch4-ultrasonic.tex}
+
 \input{sections/ch4-dcmotorcontroller.tex}
+
+\input{sections/ch4-closeproximitydetection.tex}
 
 \input{sections/ch4-stepper.tex}
 
