--- a/report/citations.bib
+++ b/report/citations.bib
@@ -333,14 +333,14 @@
 	howpublished = "\url{https://cdn.sparkfun.com/datasheets/Robotics/SNM022A-06%20update.pdf}"
 }
 
-@MISC{sabertoothpic,
-	title = {Sabertooth picture 2x5},
-	howpublished = "\url{http://www.dimensionengineering.com/products/sabertooth2x5}"
+@MISC{DRV8833pic,
+	title = {DRV8833 picture},
+	howpublished = "\url{https://www.pololu.com/product/2130}"
 }
 
-@MISC{sabertoothdata,
-	title = {Sabertooth 2x5 Datasheet},
-	howpublished = "\url{http://www.dimensionengineering.com/datasheets/Sabertooth2x5.pdf}"
+@MISC{DRV8833,
+	title = {Pololu DRV8833 Datasheet},
+	howpublished = "\url{https://www.pololu.com/file/download/drv8833.pdf?file_id=0J534}"
 }
 
 @MISC{steppermotor,
