--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -15,3 +15,6 @@ Measuring angle      & 15 degree                          \\ \hline
 \end{tabular}
 \caption{Information from the datasheet\cite{hcsr40datesheet}}
 \end{table}
+
+%\section{Motor controller directional test}
+%\lstinputlisting[firstline=1, lastline=73, title=motor-direction-test.py, language=Python]{../code/autonomous-rover/motor-direction-test.py}
