--- a/report/sections/ch4-description.tex
+++ b/report/sections/ch4-description.tex
@@ -7,3 +7,7 @@
 	\caption{Diagram of modules we are developing}
 	\label{fig:developmentdiagram}
 \end{figure}
+
+The rover will consist of two main things: A Lidar recording distances and creating a map using SLAM and a close proximity detection and navigation system.
+
+%Thomas: This needs to be stated, so that it makes sense that we're developing them seperately.
