--- a/report/sections/ch4-dcmotorcontroller.tex
+++ b/report/sections/ch4-dcmotorcontroller.tex
@@ -1,32 +1,38 @@
 \clearpage
 \section{Motorcontroller}
 
-The chassis used for the rover has 4 pre-installed DC motors, which are used for movement. To control the direction of the rover a Sabertooth 2x5 motor controller has been connected to the motors. The motor controller is used to operate the steering, forward and reversing actions of the rover.
+The chassis used for the rover has 4 pre-installed DC motors, which are all four used for movement. To control the direction of the rover a Pololu DRV8833 motor controller has been connected to the motors. The motor controller is in charge of operating the steering motions, forward motion and reversing motions of the rover.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=.8\linewidth]{images/Sabertooth2X5big.jpg}
-	\caption{Sabertooth 2x5\cite{sabertoothpic}}
+	\includegraphics[width=.8\linewidth]{images/DRV8833.png}
+	\caption{Pololu DRV8833\cite{DRV8833pic}}
 \end{figure}
 
-The driver uses a 5V supply to operate, which is easily supplied by the Raspberry Pi that is used to control the entire rover. The board supports two separate DC motor outputs that can independently controlled, in this case two motors will be connected to either side.
+The driver uses a 2.7-10.8V supply voltage to operate, which is supplied to the motor controller by an external battery pack. This battery pack is used to power the motor controller and the four DC motors on the rover. The DRV8833 has two separate DC motor outputs labelled as BOUT and AOUT, that can independently controlled by their matching inputs from the microcontroller, since this rover operates using 4 DC motors each of the outputs from the motor controller will operate two DC motors.
 
-The dipswitches on the motor controller enables many different configuration options. For this project the controller will be set to analog mode, this means that the motor controllers logic level 0 is at 2.5V with the range 0V-5V. If the input voltage is above 2.5V it will generate a forward motion and if the signal is below 2.5V there will instead be generated a backwards motion. Since this particular motor controller has two signal inputs, it is possible to control two different directions\cite{sabertoothdata}.
+The advantage of this particular motor controller is the fact that it supports analog and digital inputs. Since the Raspberry Pi has no analog outputs the controller will be given digital inputs. 
 
-Since the GPIO pins on a raspberry pi are rated at 3.3V will be using the controller in 4x sensitivity mode also. This changes the logic level range from 0V-5V with zero at 2.5V, to a logic range of 1.875V-3.125V with zero at 2.5V.  
-This makes the controller more compatible with the raspberry pi.
+\begin{table}[H]
+\centering
+\begin{tabular}{c|c|c|c|c|}
+\cline{2-5}
+                              & AIN1  & AIN2  & BIN1  & BIN2  \\ \hline
+\multicolumn{1}{|c|}{Forward} & True  & False & True  & False \\ \hline
+\multicolumn{1}{|c|}{Reverse} & False & True  & False & True  \\ \hline
+\multicolumn{1}{|c|}{Left}    & False & True  & True  & False \\ \hline
+\multicolumn{1}{|c|}{Right}   & True  & False & False & True  \\ \hline
+\multicolumn{1}{|c|}{Stop}    & False & False & False & False \\ \hline
+\end{tabular}
+\end{table}
 
-The Raspberry has no analog outputs, therefore to obtain the necessary signals to control the motors PWM (Pulse width modulation) will is used. Using the following calculations the length of the duty-cycles was determined,
+To achieve the desired directions as shown in the table above, the pins must be set to high and low accordingly. The input pins on the motor controller also allow for control with PWM (Pulse Width Modulation), which will change the length of the duty cycle and influence the speed of which the rover is moving at\cite{DRV8833}. %Code for testing the directions of the motors can be found in the appendix.  <-- Only if we have the room for it in the appendix
 
-$3.3V(\frac{zero_v}{100}) = 2.5V\quad zero_v = 75.75\%$ \\
-$3.3V(\frac{forward_v}{100}) = 3.125V\quad forward_v = 94.69\%$ \\
-$3.3V(\frac{reverse_v}{100}) = 1.875V\quad reverse_v = 56.81\%$ \\
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=.5\linewidth]{images/labelled.jpg}
+\end{figure}
 
+To enable easier access to the pins on the motor controller, as custom board was created for ease of use. The green terminals A and B are connection terminals for the AOUT and BOUT respectively. The terminal C is for the battery pack that supplies the voltage, this case it is 5 AA batteries. The label D is the Pololu DRV8833 and the final label E are the connections to the Rasperry Pi. 
 
-
-%Talk about how the signalling works
-%Possibly add a diagram
-
-%http://www.dimensionengineering.com/datasheets/Sabertooth2X5QuickStart.pdf
-%http://www.dimensionengineering.com/datasheets/Sabertooth2x5.pdf
-%http://www.dimensionengineering.com/products/sabertooth2x5
+Operating the motor controller requires 5 pins from the Raspberry Pi, 4 to control the input pins on the DRV8833 and a ground pin.
