Changed code in the appendix

--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -1,5 +1,5 @@
 \section{Code for close proximity detection}
-\lstinputlisting[firstline=1, lastline=55, title=ultrasonic.py,language=Python]{../code/ultrasonic-module/ultrasonic.py}
+\lstinputlisting[firstline=1, lastline=161, title=getdist(), language=Python]{../code/autonomous-rover/obstacle-avoidance.py}
 
 \begin{table}[H]
 \centering
