--- a/report/citations.bib
+++ b/report/citations.bib
@@ -315,7 +315,7 @@
 
 @MISC{hcsr40datesheet,
 	title = {HC-SR04 Ultrasonic Distance Sensor - Datasheet},
-	howpublished = "\url{http://www.micropik.com/PDF/HCSR04.pdf}"
+	howpublished = "\url{https://docs.google.com/document/d/1Y-yZnNhMYy7rwhAgyL_pfa39RsB-x2qR4vP8saG73rE/edit}"
 }
 
 @MISC{hcsr04timingchart,
