Setting up ROS for mapping skeleton

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -75,11 +75,7 @@
 
 \input{sections/ch4-stepper.tex}
 
-%\input{sections/ch4-design.tex}
-
-%\input{sections/ch4-specifications.tex}
-
-%\input{sections/ch4-documentation.tex}
+\input{section/ch4-setting-up-mapping}
 
 \input{sections/ch4-testing.tex}
 
