--- a/report/sections/ch4-closeproximitydetection.tex
+++ b/report/sections/ch4-closeproximitydetection.tex
@@ -1,20 +1,24 @@
 \clearpage
-\section{Close proximity detection}
+\section{Close proximity detection and\\ rover navigation}
 
-The close proximity system consists of two main components, which are the readings from the ultrasonic sensors and the control of the rover using the motor controller.
-
-%Picture of the three mounted ultra sonic sensors 
-
-The three ultra sonic sensors are mounted as close as possible to each other, while still covering the greatest amount of vision on the front of the rover. Naturally, this causes two blind spot in between the ultrasonic sensors, to have an idea of how large the blind spot is, the following measurements and calculations have been made.
-
-%Insert picture of calculations
+The close proximity system consists of two main components, which are the readings from the ultrasonic sensors and the control of the rover using the motor controller. The ultrasonic sensors return distance measurements to the programme that then determines the optimal direction according to some thresholds and parameters.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=.5\linewidth]{images/hcsr04angle.png}
+	\begin{subfigure}[H]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/mounted_ultrasonic_sensors.jpg}
+	\end{subfigure}%
+	\quad
+	\begin{subfigure}[H]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/hcsr04angle.png}
+	\end{subfigure}
+	\caption{The enclosures used to mount the ultrasonic sensors on the chassis}
 \end{figure}
-The ultrasonic sensor performs best at a $30\deg$ reading angle. This angle helps determine the area of which the ultrasonic sensor can read upon. The larger the angle, the less of a blindspot there will be when two or more ultrasonic sensors are placed on a line similar to how they are mounted on the rover\cite{hcsr40datesheet}.
 
+The vision of the rover, which relies on the distance measurements from the sensors above, is currently limited to three different measurements. This unfortunately results in some blind spots between the ultrasonic sensors.
+The ultrasonic sensor performs best at a $30\deg$ reading angle. This angle helps determine the area of which the ultrasonic sensor can read upon. The larger the angle, the less of a blind spot there will be between two ultrasonic sensors, depending on how they are mounted on the rover.\cite{hcsr40datesheet}.
+
+\clearpage
 \lstinputlisting[firstline=128, lastline=156, title=main, language=Python]{../code/autonomous-rover/obstacle-avoidance.py}
 
 The core idea behind the current algorithm, is that per loop of the main code, the three ultrasonic sensors mounted on the front of the vehicle all gather three separate measurements. Then afterwards the measurements are compared in three different statements that will determine the direction. If the distance recorded by the left facing ultrasonic sensor is less than the threshold distance set as the variable \textit{avoid\_at}, the rover will then turn towards the right for the amount of seconds that the \textit{turn\_time} variable is set to. The same thing applies to the ultrasonic sensor faced to right, but instead the rover turns to the left when the threshold is exceeded.
