--- a/report/setup/Preamble.tex
+++ b/report/setup/Preamble.tex
@@ -69,6 +69,7 @@
 % Enable the use of frames around, e.g., theorems
 % The framed package is used in the example environment
 \usepackage{framed}
+\usepackage{gensymb}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Mathematics
