Did some restructuring

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -77,25 +77,28 @@
 
 \input{sections/ch4-setting-up-mapping}
 
-\input{sections/ch4-testing.tex}
-
 %Chapter 5  -----------
 \clearpage
-\chapter{Discussion}\label{ch:discussion}
-
-\input{sections/ch5-discussion.tex}
+\chapter{Testing}\label{ch:testing}
+\input{sections/ch5-testing.tex}
 
 %Chapter 6  -----------
 \clearpage
-\chapter{Conclusion}\label{ch:conclusion}
+\chapter{Discussion}\label{ch:discussion}
 
-\input{sections/ch6-conclusion.tex}
+\input{sections/ch6-discussion.tex}
 
 %Chapter 7  -----------
 \clearpage
+\chapter{Conclusion}\label{ch:conclusion}
+
+\input{sections/ch7-conclusion.tex}
+
+%Chapter 8  -----------
+\clearpage
 \chapter{Perspective}\label{ch:perspective}
 
-\input{sections/ch7-perspective.tex}
+\input{sections/ch8-perspective.tex}
 
 \clearpage
 \Urlmuskip=0mu plus 1mu\relax
