--- a/report/sections/ch4-closeproximitydetection.tex
+++ b/report/sections/ch4-closeproximitydetection.tex
@@ -25,7 +25,7 @@ The ultrasonic sensor performs best at a $30\degree$ reading angle. This angle h
 \end{figure}
 
 The blind spot can be determined by finding the length $x$ on the figure above. The cones indicate the area of which the ultrasonic sensors covers, for both $15\degree$ and $30\degree$. Some versions of the ultrasonic sensor perform best at an $15\degree$ angle, so two different calculations have been made to help determine where the blind spots for this particular setup are located.
-The length $x$ marked on the sketch above indicates where a blind spot with the ultrasonic sensors begin. To find the length $x$, the equation $tan(\Theta)d = x$. The length d is half of the length between the center of each ultrasonic sensor and it stays constant for both calculated cases. $\Theta$ is found my measuring the angle and the value of $\Theta$ changes depending on the ultrasonic sensors operates at $15\degree$ or $30\degree$.
+The length $x$ marked on the sketch above indicates where a blind spot with the ultrasonic sensors begin. To find the length $x$, the equation $tan(\Theta)d = x$. The length d is half of the length between the center of each ultrasonic sensor and it stays constant for both calculated cases. $\Theta$ is found my measuring the angle and the value of $\Theta$ changes depending on the ultrasonic sensors operates at $15\degree (\Theta_1)$ or $30\degree (\Theta_2)$.
 
 $\Theta_1 = 65\degree$\quad\quad$d = 3.5cm$\quad\quad$tan(65\degree)3.5cm =  7.506cm$\\
 $\Theta_2 = 80\degree$\quad\quad$d = 3.5cm$\quad\quad$tan(80\degree)3.5cm =  19.849cm$
