--- a/report/sections/ch2-preliminary-research.tex
+++ b/report/sections/ch2-preliminary-research.tex
@@ -1,13 +1,43 @@
 \clearpage
 \section{Preliminary research}
+%TODO: At some point, remove this
+% ------------------------------------------ Links for Emil ---------------------------------
+
+% Good talk about making 3D maps on Mars
+
+% http://content.stamen.com/how_to_make_3d_maps_of_mars
+
+% Ultra sharp 3D maps
+
+% http://video.mit.edu/watch/ultrasharp-3-d-maps-66/
+
+% GPS links
+
+% http://en.wikipedia.org/wiki/Global_Positioning_System
+
+% http://www.gps.gov/systems/gps/space/
+
+% http://spectrum.ieee.org/aerospace/space-flight/interplanetary-gps-comes-a-step-closer
+
+% http://science.howstuffworks.com/how-is-gps-used-in-spaceflight.htm
+
+% UAV 3D mapping
+
+% http://www.geometh.ethz.ch/uav_g/proceedings/neitzel
+
+% 3D mapping reference points
+
+% http://digital.csic.es/bitstream/10261/30058/1/doc1.pdf
 
 \subsection{GPS theory}
 
-\textit{"The Global Positioning System (GPS) is a space-based satellite navigation system that provides location and time information in all weather conditions, anywhere on or near the Earth where there is an unobstructed line of sight to four or more GPS satellites. The system provides critical capabilities to military, civil, and commercial users around the world. The United States government created the system, maintains it, and makes it freely accessible to anyone with a GPS receiver."\cite{GPS1}}
+\textit{"The Global Positioning System (GPS) is a space-based satellite navigation system that provides location and time information in all weather conditions, anywhere on or near the Earth where there is an unobstructed line of sight to four or more GPS satellites. The system	 provides critical capabilities to military, civil, and commercial users around the world. The United States government created the system, maintains it, and makes it freely accessible to anyone with a GPS receiver."\cite{GPS1}}
 
 The GPS satellites each carry an atomic clock and positions the user when connected to 4 or more satellites. The satellites measure the time it takes for the signal to go back and forth between the satellites and a GPS receiver\cite{GPS1}. There is also a space "GPS" system in development, that would use the X-ray signal from dying stars to give you the exact location in space with an error rate of about 5 km\cite{GPS2}.
 
 Either of those systems would not be beneficial for our project in space, since we would need a high-accuracy location of each picture we take to make a map and a model for navigation purposes. Later in the future when people will \textit{hypothetically} be moving to Mars, another GPS-like system have to be put in place up for navigation purposes. For now, we would need to use encoders and short-to-medium range, high-accuracy signals. But these signal systems needs to be different for every planet we would go to. 
+
+Both of those systems would not benefit this project in space since we would need a high accuracy location of each picture to make a map and a model. Later in the future when people will be moving to Mars another GPS system will be put in place up there. But for now we would need to use encoders and short to medium range high accuracy signals. But the signal systems would need to be different for what planet we would go to. 
 
 \subsection{Photogrammetry theory}
 
@@ -29,7 +59,7 @@ To make a 2D or 3D map, a reference point is needed. It can be GPS positions of 
 
 \subsection{SLAM}
 
-Simultaneous Localization and Mapping (SLAM) is a particular method used to construct maps. In SLAM, the mapping device maps its environment whilst simultaniously keeping track of its location within that map, hence the name. SLAM is used mostly in autonomous vehicles that need to traverse some terrain without any prior information about it. More precisely, SLAM is a combination of algorithms, most notably Kalman filtering, that all relate to either mapping or navigation. The specifics of these algorithms are too complex for the purpose and timescale of this project.
+Simultaneous Localization and Mapping (SLAM) is a particular method used to construct maps. In SLAM, the mapping device maps its environment whilst simultaneously keeping track of its location within that map, hence the name. SLAM is used mostly in autonomous vehicles that need to traverse some terrain without any prior information about it. More precisely, SLAM is a combination of algorithms, most notably Kalman filtering, that all relate to either mapping or navigation. The specifics of these algorithms are too complex for the purpose and timescale of this project.
 
 \subsection{Sensors}
 \subsubsection{Pressure Based}
@@ -42,33 +72,44 @@ Image-based sensors are usually just cameras. %usually, just? not clear enough s
 A projected image sensor is very simple, %subjective? what?
  some known image is projected on the environment (a grid, for example), then a camera takes a picture. Since the projection is known, it is simple to detect the distance of an object on the image based on what the projection looks like. This method is limited to how fine the projected image is. %what qualifies a fine image?
 
-Stereoscopy, also known as stereophotogrammetry, is more complicated, but also more reliable. Two photos of the same scene, but from different vantage points, are taken. Small sections of one of the images are taken, and overlayed onto the other image. By finding the place on the other image where the small section fits, the algorithm can determine the depth of each pixel in that subsection. This procedure is repeated until the whole image has been processed.
+Stereoscopy, also known as stereo-photogrammetry, is more complicated, but also more reliable. Two photos of the same scene, but from different vantage points, are taken. Small sections of one of the images are taken, and overlayed onto the other image. By finding the place on the other image where the small section fits, the algorithm can determine the depth of each pixel in that subsection. This procedure is repeated until the whole image has been processed.
 
 \subsection{Optical-flow sensor}
 Optical-flow sensor is a camera mounted on a PCB board that compares changes in pixels to look out for drift and movement in a system. The concept is the same as your computer mouse follows. It will tell you the movement of your vehicle in a XY-grid. We will implement this sensor for our reference points. Need to add more here
 
 \subsubsection{Rangefinder}%NOTE: This section might be a little rambly
 %TODO:Integrate this article in here: http://kb.pulsedlight3d.com/support/solutions/articles/5000554104-reflectivity
-A rangefinder is a device that measures the distance between itself, and a point some at a certain distance away from it. Rangefinders work based on the principle that the speed of an object is defined to be \textit{distance travelled over time travelled}, which means that the distance travelled is the speed of an object times the amount of time it travelled. To put this in math terms: \(v=d/t\) or \(d=t*v\).
+A rangefinder is a device that measures the distance between itself, and a point some at a certain distance away from it. Rangefinders work based on the principle that the speed of an object is defined to be \textit{distance travelled over time travelled}, which means that the \textit{distance travelled} is the speed of an object times the amount of time it travelled. To put this in math terms: \(v=d/t\) or \(d=t*v\).
 
 Most rangefinders work on either sound or light. Both sound- and light-based rangefinders work by emitting a pulse in a specific direction, and counting how long it takes for the pulse to come back. Since the pulse has travelled back and forth, the distance is calculated as \(1/2*v*t\), where \(v\) is the speed of the pulse, and \(t\) is the time between the emission and the detection.
 
 The pulse will travel from the rangefinder, straight towards whatever object is in front of it. Often, the pulse is not normal to the object it hits; meaning that the pulse is at an angle relative to the object, so the pulse will not reflect back to the rangefinder. However, a small portion of the pulse will scatter upon impact, meaning the rangefinder might still detect the pulse once it comes back.
-%TODO: Image
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=.4\linewidth]{images/rangefinder.jpg}
+	\caption{A slightly more complex laser rangefinder.}
+	\label{fig:rangefinderIMG}
+\end{figure}
 
 This requires the rangefinder to know what the speed of the pulse is, which is a problem in unknown environments. For a rangefinder to be reliably used in such environments, it needs either to have the speed of its pulse pre-calculated, or it needs to measure the speed of the pulse by itself. Also, in situations where the speed of the pulse varies, a rangefinder is either not useful, or it needs a more complicated model of the environment it is in.
 
 The main cause for a pulse to travel at a different speed than expected is in situations where the environment the sensor is in varies in density, which depends on temperature\cite{refraction}. Hence, a simple rangefinder is not fit for an environment that varies heavily in temperature.
-%TODO: (Image?)
 
 Sound moves faster through denser mediums, where light travels slower. The speed of light is less affected by density than sound is. In earth-like atmospheres, light only travels 0.03\% slower in air when compared to the vacuum.\cite{refraction}\cite{speedOfSound}.
 %TODO: Image http://arxiv.org/pdf/1003.1508.pdf
 
 Another issue in environments with a high variation in density is refraction. Refraction is a phenomenon that occurs when a wave switches between mediums where it travels at different speeds. This change causes the wave to change its direction. %TODO:What is this? Please format it correctly! - Anthony (next row)
-%cite{snell:Wolf, K. B. (1995), "Geometry and dynamics in refracting systems", European Journal of Physics 16: 14–20.} 
+%TODO:cite{snell:Wolf, K. B. (1995), "Geometry and dynamics in refracting systems", European Journal of Physics 16: 14–20.} 
 Refraction would cause rangefinders to become effectively blind, as neither their direction nor the length measured can be trusted.
-%TODO: image{http://4.bp.blogspot.com/-Y4zXYZDJekI/Ud5C-rzi_0I/AAAAAAAACSc/EYYxL9cmy3M/s1600/Picture18.png}
 %TODO:A cite needs to be fixed above - Thomas
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=.4\linewidth]{images/refraction.png}
+	\caption{An illustration of refraction into a denser medium.}
+	\label{fig:refractionIMG}
+\end{figure}
 
 \clearpage
 \subsection{Autonomous Vehicles and Robots}
